--- a/media/ChileTrading.css
+++ b/media/ChileTrading.css
@@ -536,10 +536,45 @@ td .infoMiscValue {
   font-style: normal;
 }
 /* ============================================ */
+/* Colors */
+/* ============================================ */
+/* ============================================ */
 /* Extra functions */
 /* ============================================ */
+/* ============================================ */
+/* Root Level Controls */
+/* ============================================ */
 #basisRoot {
-  background: #444;
+  background: #454545;
+}
+.BBjTopLevelWindow-titleBar-button {
+  background-position: center center !important;
+  background-size: cover !important;
+}
+.BBjTopLevelWindow-titleBar-button img {
+  display: none;
+}
+.BBjTopLevelWindow-titleBar-button.bbj-close {
+  background: url('/files/Demos/ChileTrading/bbj-close.png') no-repeat !important;
+}
+.BBjTopLevelWindow-titleBar-button.bbj-maximize {
+  background: url('/files/Demos/ChileTrading/bbj-maximize.png') no-repeat !important;
+}
+.BBjTopLevelWindow-titleBar-button.bbj-minimize {
+  background: url('/files/Demos/ChileTrading/bbj-minimize.png') no-repeat !important;
+}
+.BBjTopLevelWindow-titleBar-button.gwt-PushButton-up {
+  opacity: .4;
+  filter: alpha(opacity=40);
+}
+.BBjTopLevelWindow-titleBar-button.gwt-PushButton-up-hovering {
+  opacity: .7;
+  filter: alpha(opacity=70);
+}
+.BBjTopLevelWindow-titleBar-button.gwt-PushButton-down-hovering,
+.BBjTopLevelWindow-titleBar-button .gwt-PushButton-down {
+  opacity: 1.0;
+  filter: alpha(opacity=100);
 }
 /* ============================================ */
 /* All BBj Controls */
@@ -548,12 +583,158 @@ td .infoMiscValue {
   font-family: Montserrat !important;
 }
 /* ============================================ */
+/* Edit Controls */
+/* ============================================ */
+.BBjEditBox:not(.bbj-disabled) {
+  color: #005270;
+  border-top: 1px solid #a6a6a6;
+  border-bottom: 1px solid #a6a6a6;
+  border-left: 1px solid #a6a6a6;
+  border-right: 1px solid #a6a6a6;
+}
+/* ============================================ */
+/* Button Controls */
+/* ============================================ */
+.BBjButton,
+.BBjButton.bbj-default,
+.BBjToolButton,
+.BBjMenuButton,
+.BBjListButton:not(.bbj-native),
+.BBjChooser-button,
+.BBjMsgBox-button,
+.BBjUserAuthentication-button,
+.BBjTabCtrl .scrollRight,
+.BBjTabCtrl .scrollLeft {
+  color: #f2f2f2;
+  background-color: #548641 !important;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#006280), to(#005270)) !important;
+  background-image: -webkit-linear-gradient(top, #006280, #005270) !important;
+  background-image: -moz-linear-gradient(top, #006280, #005270) !important;
+  background-image: -o-linear-gradient(top, #006280, #005270) !important;
+  background-image: -ms-linear-gradient(top, #006280, #005270) !important;
+  background-image: linear-gradient(top, #006280, #005270) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, StartColorStr='@startColor', EndColorStr='@stopColor') !important;
+  -webkit-border-radius: 3.1px;
+  -moz-border-radius: 3.1px;
+  -ms-border-radius: 3.1px;
+  -o-border-radius: 3.1px;
+  border-radius: 3.1px;
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15), inset 0 1px 2px 0 rgba(255, 255, 255, 0.25);
+  -moz-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15), inset 0 1px 2px 0 rgba(255, 255, 255, 0.25);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15), inset 0 1px 2px 0 rgba(255, 255, 255, 0.25);
+}
+.BBjButton:not(.bbj-disabled):focus,
+.BBjButton.bbj-default:not(.bbj-disabled):focus,
+.BBjToolButton:not(.bbj-disabled):focus,
+.BBjMenuButton:not(.bbj-disabled):focus,
+.BBjListButton:not(.bbj-native):not(.bbj-disabled):focus,
+.BBjChooser-button:not(.bbj-disabled):focus,
+.BBjMsgBox-button:not(.bbj-disabled):focus,
+.BBjUserAuthentication-button:not(.bbj-disabled):focus,
+.BBjTabCtrl .scrollRight:not(.bbj-disabled):focus,
+.BBjTabCtrl .scrollLeft:not(.bbj-disabled):focus {
+  background-color: #548641 !important;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#007599), to(#00658a)) !important;
+  background-image: -webkit-linear-gradient(top, #007599, #00658a) !important;
+  background-image: -moz-linear-gradient(top, #007599, #00658a) !important;
+  background-image: -o-linear-gradient(top, #007599, #00658a) !important;
+  background-image: -ms-linear-gradient(top, #007599, #00658a) !important;
+  background-image: linear-gradient(top, #007599, #00658a) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, StartColorStr='@startColor', EndColorStr='@stopColor') !important;
+  outline: none;
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.25), 0 0 4px 1px hsla(210, 95%, 65%, .4);
+  -moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.25), 0 0 4px 1px hsla(210, 95%, 65%, .4);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.25), 0 0 4px 1px hsla(210, 95%, 65%, .4);
+  border-color: #0078a3;
+}
+.BBjButton:not(.bbj-disabled):hover,
+.BBjButton.bbj-default:not(.bbj-disabled):hover,
+.BBjToolButton:not(.bbj-disabled):hover,
+.BBjMenuButton:not(.bbj-disabled):hover,
+.BBjListButton:not(.bbj-native):not(.bbj-disabled):hover,
+.BBjChooser-button:not(.bbj-disabled):hover,
+.BBjMsgBox-button:not(.bbj-disabled):hover,
+.BBjUserAuthentication-button:not(.bbj-disabled):hover,
+.BBjTabCtrl .scrollRight:not(.bbj-disabled):hover,
+.BBjTabCtrl .scrollLeft:not(.bbj-disabled):hover {
+  background-color: #548641 !important;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#007599), to(#00658a)) !important;
+  background-image: -webkit-linear-gradient(top, #007599, #00658a) !important;
+  background-image: -moz-linear-gradient(top, #007599, #00658a) !important;
+  background-image: -o-linear-gradient(top, #007599, #00658a) !important;
+  background-image: -ms-linear-gradient(top, #007599, #00658a) !important;
+  background-image: linear-gradient(top, #007599, #00658a) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, StartColorStr='@startColor', EndColorStr='@stopColor') !important;
+  color: #ffffff;
+  border-color: #005270;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+}
+.BBjButton:not(.bbj-disabled):active,
+.BBjButton.bbj-default:not(.bbj-disabled):active,
+.BBjToolButton:not(.bbj-disabled):active,
+.BBjMenuButton:not(.bbj-disabled):active,
+.BBjListButton:not(.bbj-native):not(.bbj-disabled):active,
+.BBjChooser-button:not(.bbj-disabled):active,
+.BBjMsgBox-button:not(.bbj-disabled):active,
+.BBjUserAuthentication-button:not(.bbj-disabled):active,
+.BBjTabCtrl .scrollRight:not(.bbj-disabled):active,
+.BBjTabCtrl .scrollLeft:not(.bbj-disabled):active {
+  background-color: #548641 !important;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0089b3), to(#0078a3)) !important;
+  background-image: -webkit-linear-gradient(top, #0089b3, #0078a3) !important;
+  background-image: -moz-linear-gradient(top, #0089b3, #0078a3) !important;
+  background-image: -o-linear-gradient(top, #0089b3, #0078a3) !important;
+  background-image: -ms-linear-gradient(top, #0089b3, #0078a3) !important;
+  background-image: linear-gradient(top, #0089b3, #0078a3) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, StartColorStr='@startColor', EndColorStr='@stopColor') !important;
+  -webkit-box-shadow: 0 1px 1px 0 rgba(255, 255, 255, 0.9), inset 0 1px 3px 0 rgba(0, 0, 0, 0.35) !important;
+  -moz-box-shadow: 0 1px 1px 0 rgba(255, 255, 255, 0.9), inset 0 1px 3px 0 rgba(0, 0, 0, 0.35) !important;
+  box-shadow: 0 1px 1px 0 rgba(255, 255, 255, 0.9), inset 0 1px 3px 0 rgba(0, 0, 0, 0.35) !important;
+  color: #ffffff !important;
+  border-color: #005270;
+  border-style: solid;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+}
+/* ============================================ */
+/* BBj Windows */
+/* ============================================ */
+.Caption.BBjTopLevelWindow-titleBar {
+  background-color: #548641 !important;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#a9a900), to(#006482)) !important;
+  background-image: -webkit-linear-gradient(top, #a9a900, #006482) !important;
+  background-image: -moz-linear-gradient(top, #a9a900, #006482) !important;
+  background-image: -o-linear-gradient(top, #a9a900, #006482) !important;
+  background-image: -ms-linear-gradient(top, #a9a900, #006482) !important;
+  background-image: linear-gradient(top, #a9a900, #006482) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, StartColorStr='#a9a900', EndColorStr='#006482') !important;
+}
+.BBjWindow.BBjTopLevelWindow-container {
+  background-color: #454545;
+}
+.BBjWindowManager-tab {
+  background: transparent !important;
+  border: none !important;
+}
+/* ============================================ */
+/* Login Window */
+/* ============================================ */
+.BBjWindow.LOGIN {
+  border-top: 2px solid #005270;
+  border-bottom: 2px solid #005270;
+  border-left: 2px solid #005270;
+  border-right: 2px solid #005270;
+  background: rgba(229, 229, 179, 0.25) url('/files/Demos/ChileTrading/ConcordiaLogo.png') no-repeat center 10px !important;
+}
+.BBjWindow.LOGIN .BBjTopLevelWindow-center {
+  background: transparent !important;
+}
+/* ============================================ */
 /* MDI Top section */
 /* ============================================ */
 .BBjWindow.titlebanner {
   background: url('/files/Demos/ChileTrading/Concordia-front-banner1.png') no-repeat !important;
   background-position: center center !important;
-  background-size: 100% auto !important;
+  background-size: cover !important;
 }
 .BBjWindow.titlebanner.BBjTopLevelWindow {
   border-top: 0px solid transparent;
@@ -563,7 +744,7 @@ td .infoMiscValue {
 }
 .BBjMDIBorder-splitter {
   background-color: #818e1d;
-  background-color: #00526f;
+  background-color: #005270;
 }
 /* ============================================ */
 /* Menu Buttons */
