--- a/media/ChileTrading.less
+++ b/media/ChileTrading.less
@@ -6,6 +6,21 @@
 /* ===========================================================   */
 @font-face { font-family: Montserrat; src: url('@{baseURL}Montserrat-Regular.ttf') format("truetype"), url('@{baseURL}Montserrat-Regular.woff') format("woff"); font-weight:300; font-style:normal} 
 
+/* ============================================ */
+/* Colors */
+/* ============================================ */
+@colorDarkBlue:		hsl(196, 100%, 22%);
+@colorMediumBlue:	hsl(194, 100%, 25%);
+@colorMediumOlive: 	hsl(060, 100%, 33%);
+@colorLightOlive: 	hsl(060, 050%, 80%);
+@colorLogoOlive: 	hsl(068, 052%, 37%);
+@colorBackground:	hsl(000, 000%, 27%);
+
+@colorDarkBorders:	@colorDarkBlue;
+@colorLightBorders:	hsl(000, 000%, 65%);
+@colorActiveBorders:lighten(@colorDarkBorders, 10%);
+@colorEditText:		@colorDarkBlue;
+@colorButtonText:	hsl(000, 000%, 95%);
 
 /* ============================================ */
 /* Extra functions */
@@ -43,11 +58,47 @@
 	border-left: @borderWidth solid @borderColor;
 	border-right: @borderWidth solid @borderColor;
 } 
-
-#basisRoot {
-	background: #444;
-	//top: -25px !important;
+.gradient (@startColor, @stopColor) {
+	background-color: #548641 !important;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(@startColor), to(@stopColor)) !important;
+	background-image: -webkit-linear-gradient(top, @startColor, @stopColor) !important;
+	background-image: -moz-linear-gradient(top, @startColor, @stopColor) !important;
+	background-image: -o-linear-gradient(top, @startColor, @stopColor) !important;
+	background-image: -ms-linear-gradient(top, @startColor, @stopColor) !important;
+	background-image: linear-gradient(top, @startColor, @stopColor) !important;
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='@startColor', EndColorStr='@stopColor') !important;
 }
+
+    
+/* ============================================ */
+/* Root Level Controls */
+/* ============================================ */
+#basisRoot {
+	background: @colorBackground;
+	//top: -25px !important;  // uncomment this to shift the whole thing up, hiding the control menu
+}
+.BBjTopLevelWindow-titleBar-button {
+	& img {display: none;}
+	&.bbj-close { background: url('@{baseURL}bbj-close.png') no-repeat !important; }
+	&.bbj-maximize { background: url('@{baseURL}bbj-maximize.png') no-repeat !important; }
+	&.bbj-minimize { background: url('@{baseURL}bbj-minimize.png') no-repeat !important; }		
+    background-position: center center !important;
+    background-size: cover !important;	
+    
+    &.gwt-PushButton-up {
+    	opacity: .4;
+        filter: alpha(opacity=40);
+    }
+    &.gwt-PushButton-up-hovering {
+    	opacity: .7;
+        filter: alpha(opacity=70);
+    }   
+    &.gwt-PushButton-down-hovering, .gwt-PushButton-down {
+    	opacity: 1.0;
+        filter: alpha(opacity=100);
+    }              
+}
+
 
 /* ============================================ */
 /* All BBj Controls */
@@ -57,20 +108,108 @@
 }
 
 /* ============================================ */
+/* Edit Controls */
+/* ============================================ */
+.BBjEditBox:not(.bbj-disabled) {
+	color: @colorEditText;
+	.border (1px, @colorLightBorders)
+}
+
+/* ============================================ */
+/* Button Controls */
+/* ============================================ */
+.BBjButton,
+.BBjButton.bbj-default,
+.BBjToolButton,
+.BBjMenuButton,
+.BBjListButton:not(.bbj-native),
+.BBjChooser-button,
+.BBjMsgBox-button,
+.BBjUserAuthentication-button,
+.BBjTabCtrl .scrollRight,
+.BBjTabCtrl .scrollLeft,
+{
+    color: @colorButtonText;
+    .gradient (@colorMediumBlue, @colorDarkBlue);
+    .roundedBorder(3.1px);
+    .box-shadow(~"0 1px 2px 0 rgba(0, 0, 0, 0.15), inset 0 1px 2px 0 rgba(255, 255, 255, 0.25)");
+
+    &:not(.bbj-disabled):focus {
+    	.gradient (lighten(@colorMediumBlue, 5%), lighten(@colorDarkBlue, 5%));
+        outline: none;
+        .box-shadow(~"0 0 2px rgba(0, 0, 0, 0.25), 0 0 4px 1px hsla(210, 95%, 65%, .4)");
+        border-color: @colorActiveBorders;
+    }
+    
+    &:not(.bbj-disabled):hover {
+    	.gradient (lighten(@colorMediumBlue, 5%), lighten(@colorDarkBlue, 5%));
+	    color: lighten(@colorButtonText, 5%);
+	    border-color: @colorDarkBorders;
+	    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+    }
+    
+    
+    &:not(.bbj-disabled):active {
+    	.gradient (lighten(@colorMediumBlue, 10%), lighten(@colorDarkBlue, 10%));
+	    .box-shadow(~"0 1px 1px 0 rgba(255, 255, 255, 0.9), inset 0 1px 3px 0 rgba(0, 0, 0, 0.35)") !important;
+	    color: lighten(@colorButtonText, 10%) !important;
+	    border-color: @colorDarkBorders;
+	    border-style: solid;
+	    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+	}
+}
+
+
+/* ============================================ */
+/* BBj Windows */
+/* ============================================ */
+.Caption.BBjTopLevelWindow-titleBar {
+	background-color: #548641 !important;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#a9a900), to(#006482)) !important;
+	background-image: -webkit-linear-gradient(top, #a9a900, #006482) !important;
+	background-image: -moz-linear-gradient(top, #a9a900, #006482) !important;
+	background-image: -o-linear-gradient(top, #a9a900, #006482) !important;
+	background-image: -ms-linear-gradient(top, #a9a900, #006482) !important;
+	background-image: linear-gradient(top, #a9a900, #006482) !important;
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#a9a900', EndColorStr='#006482') !important;
+}
+.BBjWindow.BBjTopLevelWindow-container {
+	background-color: @colorBackground;
+}
+.BBjWindowManager-tab {
+	background: transparent !important;
+	border: none !important;
+}
+
+
+/* ============================================ */
+/* Login Window */
+/* ============================================ */
+.BBjWindow.LOGIN {
+	.border(2px, @colorDarkBorders);
+	background: fade(@colorLightOlive, 25%)url('@{baseURL}ConcordiaLogo.png') no-repeat center 10px !important; 	
+	
+	& .BBjTopLevelWindow-center {
+		background: transparent !important;
+	}
+}
+
+
+/* ============================================ */
 /* MDI Top section */
 /* ============================================ */
 .BBjWindow.titlebanner {
     background: url('@{baseURL}Concordia-front-banner1.png') no-repeat !important;
     background-position: center center !important;
-    background-size: 100% auto !important;
+    background-size: cover !important;
     
     &.BBjTopLevelWindow {
     	.border(0px, transparent);
     }
 }
 .BBjMDIBorder-splitter {
-    	background-color: #818e1d; // Olive color
-    	background-color: #00526f; // Dark Blue from old site
+    	background-color: #818e1d; 			// Olive color
+    	background-color: @colorDarkBlue; 	// Dark Blue from old site
 }
 
 /* ============================================ */
