--- a/media/ChileTrading.css
+++ b/media/ChileTrading.css
@@ -547,6 +547,16 @@ td .infoMiscValue {
 #basisRoot {
   background: #454545;
 }
+.BBjWindowManager-tabs {
+  background-color: #548641 !important;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#a8a800), to(#006280)) !important;
+  background-image: -webkit-linear-gradient(top, #a8a800, #006280) !important;
+  background-image: -moz-linear-gradient(top, #a8a800, #006280) !important;
+  background-image: -o-linear-gradient(top, #a8a800, #006280) !important;
+  background-image: -ms-linear-gradient(top, #a8a800, #006280) !important;
+  background-image: linear-gradient(top, #a8a800, #006280) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, StartColorStr='@startColor', EndColorStr='@stopColor') !important;
+}
 .BBjTopLevelWindow-titleBar-button {
   background-position: center center !important;
   background-size: cover !important;
@@ -564,47 +574,109 @@ td .infoMiscValue {
   background: url('/files/Demos/ChileTrading/bbj-minimize.png') no-repeat !important;
 }
 .BBjTopLevelWindow-titleBar-button.gwt-PushButton-up {
-  opacity: .4;
-  filter: alpha(opacity=40);
+  opacity: .80;
+  filter: alpha(opacity=80);
 }
 .BBjTopLevelWindow-titleBar-button.gwt-PushButton-up-hovering {
-  opacity: .7;
-  filter: alpha(opacity=70);
+  opacity: .90;
+  filter: alpha(opacity=90);
 }
 .BBjTopLevelWindow-titleBar-button.gwt-PushButton-down-hovering,
 .BBjTopLevelWindow-titleBar-button .gwt-PushButton-down {
   opacity: 1.0;
   filter: alpha(opacity=100);
 }
+/* Retina version of the background image */
+@media only screen and (-moz-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
+  .BBjTopLevelWindow-titleBar-button.bbj-close {
+    background: url("/files/Demos/ChileTrading/bbj-close@2x.png") no-repeat !important;
+    background-size: 18px 18px !important;
+  }
+  .BBjTopLevelWindow-titleBar-button.bbj-maximize {
+    background: url('/files/Demos/ChileTrading/bbj-maximize@2x.png') no-repeat !important;
+    background-size: 18px 18px !important;
+  }
+  .BBjTopLevelWindow-titleBar-button.bbj-minimize {
+    background: url('/files/Demos/ChileTrading/bbj-minimize@2x.png') no-repeat !important;
+    background-size: 18px 18px !important;
+  }
+}
+/* ============================================ */
+/* BBj Windows */
+/* ============================================ */
+/* Titlebars */
+.Caption.BBjTopLevelWindow-titleBar {
+  background: #005270 !important;
+}
+.BBjTopLevelWindow-titleBar-label {
+  color: #f2f2f2;
+}
+/* Hide the background of the top bar bar items */
+.BBjWindowManager-tabBarContainer .Caption.BBjTopLevelWindow-titleBar {
+  background: transparent !important;
+}
+.BBjWindow.BBjTopLevelWindow-container {
+  background-color: #454545;
+}
+.BBjWindowManager-tab {
+  background: transparent !important;
+  border: none !important;
+}
 /* ============================================ */
 /* All BBj Controls */
 /* ============================================ */
-.BBjControl {
+.BBjControl,
+td.infoTitle,
+td.infoSubTitle {
   font-family: Montserrat !important;
 }
 /* ============================================ */
 /* Edit Controls */
 /* ============================================ */
-.BBjEditBox:not(.bbj-disabled) {
+.BBjEditBox:not(.bbj-disabled),
+.BBjCEdit:not(.bbj-disabled),
+.BBjInputE:not(.bbj-disabled),
+.BBjInputN:not(.bbj-disabled),
+.BBjInputD:not(.bbj-disabled),
+.BBjListBox:not(.bbj-disabled) {
   color: #005270;
   border-top: 1px solid #a6a6a6;
   border-bottom: 1px solid #a6a6a6;
   border-left: 1px solid #a6a6a6;
   border-right: 1px solid #a6a6a6;
 }
+.BBjEditBox.bbj-disabled,
+.BBjCEdit.bbj-disabled,
+.BBjInputE.bbj-disabled,
+.BBjInputN.bbj-disabled,
+.BBjInputD.bbj-disabled,
+.BBjListBox.bbj-disabled {
+  color: #383838;
+  border-top: 1px solid #999999;
+  border-bottom: 1px solid #999999;
+  border-left: 1px solid #999999;
+  border-right: 1px solid #999999;
+  background-color: #f2f2f2;
+}
+.BBjListButton-buttonText:not(.bbj-disabled) {
+  color: #005270;
+}
+.BBjListButton-buttonText.bbj-disabled {
+  color: #383838;
+}
 /* ============================================ */
 /* Button Controls */
 /* ============================================ */
-.BBjButton,
-.BBjButton.bbj-default,
-.BBjToolButton,
-.BBjMenuButton,
-.BBjListButton:not(.bbj-native),
-.BBjChooser-button,
-.BBjMsgBox-button,
-.BBjUserAuthentication-button,
-.BBjTabCtrl .scrollRight,
-.BBjTabCtrl .scrollLeft {
+.BBjButton:not(.bbj-transparent):not(.menu),
+.BBjButton.bbj-default:not(.bbj-transparent):not(.menu),
+.BBjToolButton:not(.bbj-transparent):not(.menu),
+.BBjMenuButton:not(.bbj-transparent):not(.menu),
+.BBjListButton:not(.bbj-native):not(.bbj-transparent):not(.menu),
+.BBjChooser-button:not(.bbj-transparent):not(.menu),
+.BBjMsgBox-button:not(.bbj-transparent):not(.menu),
+.BBjUserAuthentication-button:not(.bbj-transparent):not(.menu),
+.BBjTabCtrl .scrollRight:not(.bbj-transparent):not(.menu),
+.BBjTabCtrl .scrollLeft:not(.bbj-transparent):not(.menu) {
   color: #f2f2f2;
   background-color: #548641 !important;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#006280), to(#005270)) !important;
@@ -623,16 +695,16 @@ td .infoMiscValue {
   -moz-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15), inset 0 1px 2px 0 rgba(255, 255, 255, 0.25);
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15), inset 0 1px 2px 0 rgba(255, 255, 255, 0.25);
 }
-.BBjButton:not(.bbj-disabled):focus,
-.BBjButton.bbj-default:not(.bbj-disabled):focus,
-.BBjToolButton:not(.bbj-disabled):focus,
-.BBjMenuButton:not(.bbj-disabled):focus,
-.BBjListButton:not(.bbj-native):not(.bbj-disabled):focus,
-.BBjChooser-button:not(.bbj-disabled):focus,
-.BBjMsgBox-button:not(.bbj-disabled):focus,
-.BBjUserAuthentication-button:not(.bbj-disabled):focus,
-.BBjTabCtrl .scrollRight:not(.bbj-disabled):focus,
-.BBjTabCtrl .scrollLeft:not(.bbj-disabled):focus {
+.BBjButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjButton.bbj-default:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjToolButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjMenuButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjListButton:not(.bbj-native):not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjChooser-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjMsgBox-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjUserAuthentication-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjTabCtrl .scrollRight:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus,
+.BBjTabCtrl .scrollLeft:not(.bbj-transparent):not(.menu):not(.bbj-disabled):focus {
   background-color: #548641 !important;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#007599), to(#00658a)) !important;
   background-image: -webkit-linear-gradient(top, #007599, #00658a) !important;
@@ -647,16 +719,16 @@ td .infoMiscValue {
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.25), 0 0 4px 1px hsla(210, 95%, 65%, .4);
   border-color: #0078a3;
 }
-.BBjButton:not(.bbj-disabled):hover,
-.BBjButton.bbj-default:not(.bbj-disabled):hover,
-.BBjToolButton:not(.bbj-disabled):hover,
-.BBjMenuButton:not(.bbj-disabled):hover,
-.BBjListButton:not(.bbj-native):not(.bbj-disabled):hover,
-.BBjChooser-button:not(.bbj-disabled):hover,
-.BBjMsgBox-button:not(.bbj-disabled):hover,
-.BBjUserAuthentication-button:not(.bbj-disabled):hover,
-.BBjTabCtrl .scrollRight:not(.bbj-disabled):hover,
-.BBjTabCtrl .scrollLeft:not(.bbj-disabled):hover {
+.BBjButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjButton.bbj-default:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjToolButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjMenuButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjListButton:not(.bbj-native):not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjChooser-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjMsgBox-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjUserAuthentication-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjTabCtrl .scrollRight:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover,
+.BBjTabCtrl .scrollLeft:not(.bbj-transparent):not(.menu):not(.bbj-disabled):hover {
   background-color: #548641 !important;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#007599), to(#00658a)) !important;
   background-image: -webkit-linear-gradient(top, #007599, #00658a) !important;
@@ -669,16 +741,16 @@ td .infoMiscValue {
   border-color: #005270;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
-.BBjButton:not(.bbj-disabled):active,
-.BBjButton.bbj-default:not(.bbj-disabled):active,
-.BBjToolButton:not(.bbj-disabled):active,
-.BBjMenuButton:not(.bbj-disabled):active,
-.BBjListButton:not(.bbj-native):not(.bbj-disabled):active,
-.BBjChooser-button:not(.bbj-disabled):active,
-.BBjMsgBox-button:not(.bbj-disabled):active,
-.BBjUserAuthentication-button:not(.bbj-disabled):active,
-.BBjTabCtrl .scrollRight:not(.bbj-disabled):active,
-.BBjTabCtrl .scrollLeft:not(.bbj-disabled):active {
+.BBjButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjButton.bbj-default:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjToolButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjMenuButton:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjListButton:not(.bbj-native):not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjChooser-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjMsgBox-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjUserAuthentication-button:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjTabCtrl .scrollRight:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active,
+.BBjTabCtrl .scrollLeft:not(.bbj-transparent):not(.menu):not(.bbj-disabled):active {
   background-color: #548641 !important;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#0089b3), to(#0078a3)) !important;
   background-image: -webkit-linear-gradient(top, #0089b3, #0078a3) !important;
@@ -694,26 +766,6 @@ td .infoMiscValue {
   border-color: #005270;
   border-style: solid;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
-}
-/* ============================================ */
-/* BBj Windows */
-/* ============================================ */
-.Caption.BBjTopLevelWindow-titleBar {
-  background-color: #548641 !important;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#a9a900), to(#006482)) !important;
-  background-image: -webkit-linear-gradient(top, #a9a900, #006482) !important;
-  background-image: -moz-linear-gradient(top, #a9a900, #006482) !important;
-  background-image: -o-linear-gradient(top, #a9a900, #006482) !important;
-  background-image: -ms-linear-gradient(top, #a9a900, #006482) !important;
-  background-image: linear-gradient(top, #a9a900, #006482) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, StartColorStr='#a9a900', EndColorStr='#006482') !important;
-}
-.BBjWindow.BBjTopLevelWindow-container {
-  background-color: #454545;
-}
-.BBjWindowManager-tab {
-  background: transparent !important;
-  border: none !important;
 }
 /* ============================================ */
 /* Login Window */
@@ -743,14 +795,13 @@ td .infoMiscValue {
   border-right: 0px solid transparent;
 }
 .BBjMDIBorder-splitter {
-  background-color: #818e1d;
-  background-color: #005270;
+  background-color: #454545;
 }
 /* ============================================ */
 /* Menu Buttons */
 /* ============================================ */
 .BBjButton.menu.levelbutton {
-  color: #272727;
+  color: #262626;
   font-size: 14px !important;
   font-weight: bold !important;
   -webkit-border-radius: 0;
@@ -791,6 +842,8 @@ td .infoMiscValue {
   border-bottom-color: #000 !important;
   border-top-color: transparent !important;
   text-shadow: none;
+  color: #000 !important;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
 }
 .BBjButton.menu.levelbutton:active.BBjButton.menu.levelbutton:active.ID1 {
   background: rgba(255, 255, 255, 0.95) url('/files/Demos/ChileTrading/Menu.ID1.png') no-repeat center 10px !important;
@@ -803,4 +856,38 @@ td .infoMiscValue {
 }
 .BBjButton.menu.levelbutton .basis-button-face {
   vertical-align: bottom !important;
+}
+/* ============================================ */
+/* All Forms */
+/* ============================================ */
+/* Set the text color to the company color */
+.BBjStaticText.GroupTitle,
+td.infoTitle {
+  color: #006280;
+  text-shadow: 0 1px 0 #fff;
+}
+/* Sets the font sizes for normal labels and headers */
+td.infoTitle,
+.BBjListButton-item,
+.BBjListButton-buttonText {
+  font-size: 15px !important;
+}
+.BBjStaticText:not(.GroupTitle),
+td.infoSubTitle {
+  font-size: 13px !important;
+}
+/* ============================================ */
+/* Fleet Form */
+/* ============================================ */
+.FormWnd .BBjStaticText:not(.GroupTitle) {
+  font-size: 13px !important;
+}
+.SearchWnd {
+  border-right: 1px solid #a6a6a6;
+}
+/* ============================================ */
+/* Message (Contact) Form */
+/* ============================================ */
+.BBjWindow.Form .BBjControl {
+  font-size: 13px !important;
 }
